src/snapshots/aic__parser__tests__parse_assignment.snap
---
source: src/parser.rs
expression: program
---
statements:
  - Assign:
      name: x
      value:
        IntLit: 42
