src/snapshots/aic__parser__tests__parse_binary_expression.snap
---
source: src/parser.rs
expression: program
---
statements:
  - Expr:
      expr:
        BinOp:
          lhs:
            IntLit: 42
          op: Add
          rhs:
            IntLit: 10
