src/snapshots/aic__parser__tests__parse_complex_expression.snap
---
source: src/parser.rs
expression: program
---
statements:
  - Expr:
      expr:
        BinOp:
          lhs:
            BinOp:
              lhs:
                IntLit: 42
              op: Add
              rhs:
                BinOp:
                  lhs:
                    IntLit: 10
                  op: Mul
                  rhs:
                    IntLit: 5
          op: Sub
          rhs:
            IntLit: 8
