src/snapshots/aic__parser__tests__parse_error_recovery.snap
---
source: src/parser.rs
expression: "format!(\"{:?}\", errors)"
---
"[found end of input at 16..16 expected 'Mul', 'Div', 'Add', 'Sub', or 'RParen']"
