src/snapshots/aic__parser__tests__parse_function_call.snap
---
source: src/parser.rs
expression: program
---
statements:
  - FnDecl:
      name: zero
      params: []
      type: I32
      body:
        - Expr:
            expr:
              IntLit: 0
  - Expr:
      expr:
        FnCall:
          name: zero
          args: []
