src/snapshots/aic__parser__tests__parse_if_statement_with_else.snap
---
source: src/parser.rs
expression: program
---
statements:
  - If:
      condition:
        IntLit: 1
      then_branch:
        - Expr:
            expr:
              IntLit: 1
      else_branch:
        - Expr:
            expr:
              IntLit: 2
