src/snapshots/aic__parser__tests__parse_if_statement_with_nested_else.snap
---
source: src/parser.rs
expression: program
---
statements:
  - If:
      condition:
        IntLit: 1
      then_branch:
        - If:
            condition:
              IntLit: 2
            then_branch:
              - Expr:
                  expr:
                    IntLit: 3
            else_branch:
              - Expr:
                  expr:
                    IntLit: 4
      else_branch:
        - Expr:
            expr:
              IntLit: 5
