src/snapshots/aic__parser__tests__parse_integer_literal.snap
---
source: src/parser.rs
expression: program
---
statements:
  - Expr:
      expr:
        IntLit: 42
