src/snapshots/aic__parser__tests__parse_mutable_variable_declaration.snap
---
source: src/parser.rs
expression: program
---
statements:
  - VarDecl:
      name: x
      type: I32
      value:
        IntLit: 42
